testsuite/tests/typecheck/should_fail/T10194.stderr

T10194.hs:7:8: error:
    • Couldn't match type ‘b0’ with ‘X’
      Expected: (X -> c) -> (a -> X) -> a -> c
        Actual: (b0 -> c) -> (a -> b0) -> a -> c
      Cannot instantiate unification variable ‘b0’
      with a type involving polytypes: X
    • In the expression: (.)
      In an equation for ‘comp’: comp = (.)
